--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -1,62 +1,40 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background-color: $bg-body;
-}
-
-a {
-    text-decoration: none;
-}
-
-img {
-    vertical-align: middle;
-    width: 100%;
-    max-width: 100%;
-    object-fit: cover;
-}
-
 .noScroll {
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 .myContainer {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
 }
 
 @media (min-width: 576px) {
     .myContainer {
-        max-width: 540px;
+        max-width: 540px !important;
     }
 }
 
 @media (min-width: 768px) {
     .myContainer {
-        max-width: 720px;
+        max-width: 720px !important;
     }
 }
 
 @media (min-width: 992px) {
     .myContainer {
-        max-width: 960px;
+        max-width: 960px !important;
     }
 }
 
 @media (min-width: 1200px) {
     .myContainer {
-        max-width: 1200px;
+        max-width: 1200px !important;
     }
 }
 
 @media (min-width: 1400px) {
     .myContainer {
-        max-width: 1400px;
+        max-width: 1400px !important;
     }
 }
