--- a/src/js/components/FilterPanel/FilterPanel.scss
+++ b/src/js/components/FilterPanel/FilterPanel.scss
@@ -1,5 +1,9 @@
 @import '../../../scss/module-base.scss';
 
 .filterPanel {
-    width: toRem(2000)
+    @apply fixed lg:sticky right-0 top-0 lg:top-24 px-4 h-full lg:h-auto bg-white w-4/5 sm:w-3/5 md:w-1/2 lg:w-full z-50 lg:z-0 transition-transform duration-300 ease-in-out lg:translate-x-0 overflow-y-auto
+}
+
+.openFilterPanel {
+    @apply translate-x-full
 }
