--- a/src/js/components/FilterPanel/FilterPanel.scss
+++ b/src/js/components/FilterPanel/FilterPanel.scss
@@ -1,9 +1,17 @@
 @import '../../../scss/module-base.scss';
 
-.filterPanel {
-    @apply fixed lg:sticky right-0 top-0 lg:top-24 px-4 h-full lg:h-auto bg-white w-4/5 sm:w-3/5 md:w-1/2 lg:w-full z-50 lg:z-0 transition-transform duration-300 ease-in-out lg:translate-x-0 overflow-y-auto
+.overlayFilterPanel {
+    @apply fixed top-0 left-0 h-full w-full bg-black bg-opacity-25 z-40;
 }
 
-.openFilterPanel {
-    @apply translate-x-full
+.filterPanelHeader {
+    @apply block lg:hidden flex justify-between items-center py-4;
+}
+
+.filterText {
+    @apply text-lg font-medium text-gray-900;
+}
+
+.closeBtnFilterPanel {
+    @apply -mr-2 flex h-10 w-10 items-center justify-center rounded-md bg-white p-2 text-gray-400;
 }
